#Added Swagger and Flyway

--- a/user-service/src/main/resources/application.yml
+++ b/user-service/src/main/resources/application.yml
@@ -7,9 +7,9 @@ spring:
     url: jdbc:mysql://${MYSQL_HOST:localhost}:3306/user?createDatabaseIfNotExist=true
     username: root
     password: root
-  jpa: 
-    hibernate:
-      ddl-auto: update
+  #jpa: 
+  #  hibernate:
+  #    ddl-auto: update
 server:
   contextPath: /
   port: 8081
