--- a/book-service/src/main/resources/application.yml
+++ b/book-service/src/main/resources/application.yml
@@ -7,8 +7,8 @@ spring:
     url: jdbc:mysql://${MYSQL_HOST:localhost}:3306/book?createDatabaseIfNotExist=true
     username: root
     password: root
-  jpa: 
-    hibernate:
-      ddl-auto: update
+  #jpa: 
+  #  hibernate:
+  #    ddl-auto: update
 server:
   port: 8080
