--- a/config-server/src/main/resources/application.yml
+++ b/config-server/src/main/resources/application.yml
@@ -1,6 +1,8 @@
 # GLOBAL CONFIGURATION
 
 spring:
+  profile:
+    active: default
   application.name: config-server-service
   rabbitmq:
     host: localhost
@@ -11,8 +13,8 @@ spring:
     config:
       server:
         git:
-          uri: file:///C:/Hans/Learning/Jpop/config-server
-          default-label: main
+          uri: https://github.com/hansnath3/config-server.git
+        default-label: main
 server:
   port: 8888
 management:
