--- a/eureka-server/src/main/resources/application.yml
+++ b/eureka-server/src/main/resources/application.yml
@@ -1,7 +1,8 @@
 # GLOBAL CONFIGURATION
 
 spring:
-  application.name: eureka-server-service
+  application:
+    name: eureka-server-service
 eureka:
    client:
       registerWithEureka: false
